[tool.poetry]
name = "infrahub-agent"
version = "0.1.0"
description = ""
authors = ["ubaumann <github@m.ubaumann.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
langchain-community = "^0.3.9"
openai = "^1.57.0"
infrahub-sdk = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
